prodMetadata/src/objects/Grant_Obligation__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Challenges_to_Delivery__c</fullName>
        <label>Current Challenges to Delivery</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Focus_Area_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Focus Area - Issue</label>
        <referenceTo>Focus_Area__c</referenceTo>
        <relationshipLabel>Grant Obligations</relationshipLabel>
        <relationshipName>Grant_Obligations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Focus_Area_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Focus Area - Program</label>
        <referenceTo>Focus_Area__c</referenceTo>
        <relationshipLabel>Grant Obligations (Focus Area - Program)</relationshipLabel>
        <relationshipName>Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <label>Grant</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Grant Obligations</relationshipLabel>
        <relationshipName>Grant_Obligations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Latest_Results__c</fullName>
        <description>Details of current status</description>
        <inlineHelpText>Details of current status</inlineHelpText>
        <label>Latest Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Status_Date__c</fullName>
        <label>Latest Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_to_Deliverable__c</fullName>
        <label>Link to Deliverable</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Measurement__c</fullName>
        <label>Measurement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Obligation_Description__c</fullName>
        <label>Obligation Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Staff_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Staff Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grant_Obligations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Data_Highlights__c</fullName>
        <label>Survey Data Highlights</label>
        <type>TextArea</type>
    </fields>
    <label>Grant Obligation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GON-{000000}</displayFormat>
        <label>Grant Obligation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Obligations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>